improved visual look-and-feel of pop-up dialog boxes fixed buttons not displaying properly if text overflows in certain browsers/fonts changed font family priority (mainly affects non-MacOSX users) tweaked login error message text tweaked button sprite other minor aesthetic tweaks

--- a/war/MobilizeWeb.css
+++ b/war/MobilizeWeb.css
@@ -1,7 +1,7 @@
 
 body {
 	color: #003;
-	font-family: "lucida grande",tahoma,verdana,arial,sans-serif;
+	font-family: "Lucida Grande", Arial, Helvetica, Verdana, sans-serif;
 	font-size: 11px;
 	padding: 0px;
 	margin: 0px;
@@ -9,13 +9,19 @@ body {
 }
 
 button {
-	background: repeat-x url("images/button_bw.gif");
-  border: solid thin #AAA;
-  /*box-shadow: -1px 1px 5px 0px #CCC;*/
-  height: 22px;
-  border-bottom: solid thin #888;
+  background: repeat-x url("images/button_bw.gif");
+  background-size: 100% 100%;
+  font-weight: bold;
+  border: solid thin #888;
+  /* box-shadow: 0px 0px 3px rgba(0,0,0,0.5); this causes text alignment issues */
+  -moz-border-radius: 2px;
+  -webkit-border-radius: 2px;
+  -khtml-border-radius: 2px;
+  border-radius: 2px;
+  height: auto;
   cursor: pointer;
-  padding: 2px 5px 4px;
+  padding: 3px 12px;
+  vertical-align: middle;
 }
 
 button:active {
@@ -24,7 +30,7 @@ button:active {
 }
 
 input, textarea {
-	font-family: "lucida grande",tahoma,verdana,arial,sans-serif;
+	font-family: "Lucida Grande", Arial, Helvetica, Verdana, sans-serif;
 	font-size: 11px;
 }
 
@@ -75,65 +81,132 @@ a:hover, a:active {
 
 /** Most GWT widgets already have a style name defined */
 
-.gwt-DateBox {
-	width: 75px;
-}
-
 .gwt-DatePicker {
-	background-color: white;
-	border: solid thin #999;
+    border: 1px solid #AAAAAA;
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    -khtml-border-radius: 2px;
+    border-radius: 2px;
+    -moz-box-shadow: 0px 3px 10px rgba(0,0,0,0.5);
+	-webkit-box-shadow: 0px 3px 10px rgba(0,0,0,0.5);
+	box-shadow: 0px 3px 10px rgba(0,0,0,0.5);
+    cursor: default;
 }
 
-.datePickerDay {
-	cursor: pointer;
+.gwt-DatePicker td, .datePickerMonthSelector td:focus {
+    outline: none
 }
 
-.datePickerDay, .datePickerWeekdayLabel, .datePickerWeekendLabel {
-	font-size: 0.8em;
-	padding: 4px;
-	text-align: center;
+.datePickerMonthSelector td:focus {
+    outline: none
+}
+
+.datePickerDays {
+    width: 100%;
+    background: white;
 }
 
 .datePickerWeekdayLabel, .datePickerWeekendLabel {
-	-moz-background-clip: border;
-	-moz-background-origin: padding;
-	-moz-background-size: auto auto;
-	background-attachment: scroll;
-	background-color: #CCC;
-	background-image: none;
-	background-position: 0 0;
-	background-repeat: repeat;
-	cursor: default;
-	padding-bottom: 2px;
-	padding-left: 4px;
-	padding-right: 4px;
-	padding-top: 0;
+    font-size: 10px;
+    font-weight: bold;
+    text-align: center;
+    padding: 4px;
+    outline: none;
 }
 
-.datePickerDayIsWeekend {
-	background-color: #EEE;
+.datePickerDay {
+    font-size: 10px;
+    text-align: center;
+    padding: 4px;
+    outline: none;
+    cursor: pointer;
 }
 
-.datePickerDayIsFiller {
-	color: #777;
+.datePickerWeekdayLabel {
+    background: #ececec;
+    border-top: 1px solid #d9d9d9;
+    border-bottom: 1px solid #d9d9d9;
+    font-color: #f8941d;
+    padding: 2px 10px 2px;
+    cursor: default;
+}
+
+.datePickerWeekendLabel {
+    background: #ececec;
+    border-top: 1px solid #d9d9d9;
+    border-bottom: 1px solid #d9d9d9;
+    font-color: #636363;
+    padding: 0px 10px 2px;
+    cursor: default;
 }
 
 .datePickerDayIsToday {
-	background-color: #EEE;
-	border: solid 1px #AAA;
-	font-weight: bold;
-}
-	
-.datePickerMonthSelector {
-	background-color: #CCC;
-	font-size: 0.9em;
-	font-weight: bold;
-	padding: 0px 5px;
-	text-align: center;
+    border: 1px dotted #888888;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -khtml-border-radius: 4px;
+    border-radius: 4px;
 }
 
-.gwt-DateBox {
-	height: 11px;
+.datePickerDayIsWeekend {
+    background: #f7f7f7;
+}
+
+.datePickerDayIsFiller {
+    color: #888888;
+}
+
+.datePickerDayIsValue {
+	background: #fcea74;
+	border: 1px dotted #FC0;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	-khtml-border-radius: 4px;
+	border-radius: 4px;
+}
+
+.datePickerDayIsDisabled {
+    color: #AAAAAA;
+    font-style: italic;
+}
+
+.datePickerDayIsValueAndHighlighted, .datePickerDayIsHighlighted {
+    background: #fff8c9;
+}
+
+.datePickerMonthSelector {
+    background: #f7f7f7;
+    width: 100%;
+}
+
+.datePickerPreviousButton, .datePickerNextButton {
+    font-size: 12px;
+    font-weight: bold;
+    line-height: 1em;
+    color: #AAAAAA;
+    cursor: pointer;
+    padding: 0px 4px;
+}
+
+td.datePickerMonth {
+    text-align: center;
+    vertical-align: middle;
+    white-space: nowrap;
+    font-size: 12px;
+    font-weight: bold;
+    color: #333333;
+}
+
+.gwt-DateBox input {
+    width: 8em;
+}
+
+.dateBoxFormatError {
+    background: #ffcccc;
+}
+
+.dateBoxPopup {
+
 }
 
 .gwt-TabBar {
@@ -147,7 +220,7 @@ a:hover, a:active {
   border: solid 1px #DDD;
   border-bottom: none;
   font-weight: bold;
-  padding: 4px 10px;
+  padding: 4px 15px;
   margin: 0px 5px;
 }
 
@@ -156,7 +229,7 @@ a:hover, a:active {
   /*background-color: #DDD;*/
   border: solid 1px #FFF;
   border-bottom: none;
-  padding: 5px 10px 6px;
+  padding: 5px 15px 6px;
   text-weight: bold;
 }
 
@@ -203,36 +276,27 @@ a:hover, a:active {
 /** Dialog box styles taken from (old?) gwt default style sheet. **/
 
 .gwt-DialogBox {
-  border: 1px solid #bbbbbb;
+  border: 1px solid #a8a8a8;
+  background: #FFFFFF;
+  -moz-box-shadow: 0px 5px 30px rgba(0,0,0,0.5);
+  -webkit-box-shadow: 0px 5px 30px rgba(0,0,0,0.5);
+  box-shadow: 0px 5px 30px rgba(0,0,0,0.5);
+  padding: 20px;
 }
 
 .gwt-DialogBox .Caption {
-  background: #B8CEE0 url(images/bg_headergradient.gif) repeat-x; /* color matches main page header stripe*/
-  border-bottom: 1px solid #bbbbbb;
-  cursor: default;
+  font-size: 14px;
   font-weight: bold;
-  padding: 4px 4px 4px 10px;
+  font-color: #FFFFFF;
+  cursor: default;
+  padding-bottom: 10px;
 }
 
+/*
 .gwt-DialogBox .Content table {
-  filter: alpha(opacity=100); /* Fixes rendering issues in IE7 */
+  filter: alpha(opacity=100);
 }
 
-.gwt-DialogBox { border: 1px solid #003; background-color: #003;}
-.gwt-DialogBox .Caption {
-  background: #B8CEE0 url(images/bg_headergradient.gif) repeat-x; 
-  border-bottom: 1px solid #bbbbbb;
-  cursor: default;
-  font-weight: bold;
-  padding: 6px 4px 6px 10px;
-}
-
-.gwt-DialogBox { 
-  background-color: #888;
-	/*border: 1px solid #AAA;*/
-	border: none;
-	border-top: 1px solid #888;  
-}
 .gwt-DialogBox .dialogContent { background-color: white; }
 .gwt-DialogBox .dialogTopLeft { background-color: #888; }
 .gwt-DialogBox .dialogTopLeftInner {}
@@ -256,6 +320,7 @@ a:hover, a:active {
 .gwt-DialogBox .dialogBottomCenterInner {}
 .gwt-DialogBox .dialogBottomRight { background-color: #AAA; }
 .gwt-DialogBox .dialogBottomRightInner {}
+*/
 
 /********* app-wide message styles *********************/
 
@@ -268,14 +333,10 @@ a:hover, a:active {
 }
 
 .errorDialogButtonDiv {
-  background-color: #AAA;
-  border-top: solid 1px #666;
   text-align: right;
 }
 
 .infoDialogButtonDiv {
-	background-color: #CCC;
-	border-top: solid 1px #AAA;
 	text-align: right;
 }
 
